とりあえず雰囲気

--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,4 +1,6 @@
-<hgroup class="confwd">
-  <h1>conferenceWithDevelopers</h1>
-  <h2>@2013-02-23</h2>
-</hgroup>
+<div class="bracket">
+  <hgroup class="logotype">
+    <h1>conferenceWithDevelopers</h1>
+    <h2>@2013-02-23</h2>
+  </hgroup>
+</div>
