--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4,3 +4,10 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+@import "compass/css3";
+
+@import "typography";
+@import "logotype";
+@import "base";
+@import "layout";
+@import "footer";
