--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,15 @@
+body > div {
+  width: 100%;
+}
+
+article, header {
+  margin: 0 auto;
+  width: 1120px;
+}
+
+header {
+  text-align: right;
+}
 article > div.bracket {
   padding: 120px 0;
   text-align: center;
