--- a/sass/_logotype.scss
+++ b/sass/_logotype.scss
@@ -1,22 +1,34 @@
 div.bracket:before {
   content: '[';
+  margin-right: 0.2em;
   font-family: 'Raleway';
-  font-size: 14em;
+  font-size: 12em;
   color: #eee;
 }
 
 div.bracket:after {
   content: ']';
+  margin-left: 0.2em;
   font-family: 'Raleway';
-  font-size: 14em;
+  font-size: 12em;
   color: #eee;
 }
 
 div.bracket {
   vertical-align: middle;
 }
+
+header > div.bracket {
+  padding: 30px 0;
+}
+
+
 hgroup.logotype {
   display: inline-block;
+}
+
+body > div >  header  {
+  font-size: 4pt;
 }
 /*
   :after {
