--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,17 +1,23 @@
 body {
+  color: #223;
   font-size: 12pt;
 }
+
 hgroup.logotype {
   font-family: 'Raleway';
   text-align: right;
   h1 {
     color: #44a5cb;
-    font-size: 5.4em;
+    font-size: 4.5em;
   }
   h2 {
     color: #999;
-    font-size: 3em;
+    font-size: 2.6em;
   }
+}
+
+article {
+  font-family: "ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro",Meiryo,"メイリオ","ＭＳ Ｐゴシック",Verdana,Geneva,Arial,Helvetica;
 }
 
 nav {
@@ -21,5 +27,35 @@ nav {
     color: #eee;
     
   }
+}
 
+strong {
+  font-size: 1.1em;
+  font-weight: bold;
+}
+
+article > h1 {
+  font-size: 2.2em;
+  color: #44a5cb;
+}
+
+article > h1:before {
+  content: '@';
+  margin-left: -0.92em;
+  font-size: 5em;
+  color: #eee;
+  vertical-align: -0.25em;
+}
+
+h2 {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+article > h2:before {
+  content: '-';
+  margin-left: -0.5em;
+  font-size: 3em;
+  color: #ededed;
+  vertical-align: -0.2em;
 }
