--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,8 @@
 <nav>
   <ul>
-    <li>Home</li>
-    <li>Session</li>
-    <li>Speakers</li>
-    <li>Sponsers</li>
-    <li>Access</li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/session">Session</a></li>
+    <li><a href="/speakers">Speakers</a></li>
+    <li><a href="/access">Access</a></li>
   </ul>
 </nav>
