--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,7 +4,7 @@ body > div {
 
 article, header {
   margin: 0 auto;
-  width: 1120px;
+  width: 920px;
 }
 
 
@@ -12,7 +12,7 @@ header {
   text-align: right;
 }
 article > div.bracket {
-  padding: 120px 0;
+  padding: 80px 0;
   text-align: center;
 }
 
@@ -33,7 +33,7 @@ article > div.bracket {
 }
 
 
-footer > nav {
+nav.global {
   text-align: center;
   ul {
     display: block;
@@ -43,6 +43,10 @@ footer > nav {
       margin: 15px;
     }
   }
+}
+
+div#over > nav.global ul {
+  margin : 0;
 }
 
 @media screen and (max-width: 568px) {
