--- a/sass/_logotype.scss
+++ b/sass/_logotype.scss
@@ -2,7 +2,7 @@ div.bracket:before {
   content: '[';
   margin-right: 0.2em;
   font-family: 'Raleway';
-  font-size: 12em;
+  font-size: 10em;
   color: #eee;
 }
 
@@ -10,7 +10,7 @@ div.bracket:after {
   content: ']';
   margin-left: 0.2em;
   font-family: 'Raleway';
-  font-size: 12em;
+  font-size: 10em;
   color: #eee;
 }
 
@@ -30,13 +30,10 @@ hgroup.logotype {
 body > div >  header  {
   font-size: 4pt;
 }
-/*
-  :after {
-    content: ']'
-  }
+body > div > article > div > hgroup {
+  font-size: 8pt;
 }
 
-*/
 
 @media screen and (max-width: 568px) {
   div.bracket {
