--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -7,6 +7,9 @@ article, header {
   width: 920px;
 }
 
+.clear-fix {
+  clear: both;
+}
 
 header {
   text-align: right;
@@ -59,5 +62,41 @@ div#over > nav.global ul {
       }
     }
   }
+}
+
+section.speaker {
+  display: block;
+  img {
+    display: block;
+    float: left;
+    width: 200px;
+  }
+
+  div {
+    float:left;
+    hgroup {
+      display: block;
+      margin-left: 1em;
+      h3 {
+        margin: 0.2em 0;
+        font-size: 1.5em;
+        font-weight: bold;
+      }
+
+      h4 {
+        font-weight: bold;
+      }
+
+    }
+
+    p {
+      margin-left: 1em;
+      margin-top: 1.75em;
+    }
+  }
+}
+
+section.speaker:after {
+  clear: both;
 }
 
